# r2ai-stage-1

./: .gitattributes  .gitignore  README.en.md  README.md
faiteam/src/R2AI/ChunkExtractor/: pyproject.toml
faiteam/src/R2AI/ChunkExtractor/example/: example.py  tree_output.json
faiteam/src/R2AI/ChunkExtractor/src/ChunkExtractor/: chunk_extractor.py
faiteam/src/R2AI/ChunkExtractor/src/ChunkExtractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
faiteam/src/R2AI/ChunkExtractor/src/ChunkExtractor/TreeExtractor/: tree_chunks_extractor.py
faiteam/src/R2AI/FisReader/: README.md  pyproject.toml
faiteam/src/R2AI/FisReader/example/: data.docx
faiteam/src/R2AI/FisReader/src/FisReader/: __init__.py  document.py  document_factory.py
faiteam/src/R2AI/FisReader/src/FisReader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
faiteam/src/R2AI/FisReader/src/FisReader/reader/: doc2docx.py  docx_reader.py  markdown_reader.py  ocr_reader.py  pdf_reader.py
faiteam/src/R2AI/FisReader/src/GeneralChunkExtractor/: __init__.py  chunk_extract.py
faiteam/src/R2AI/GeneralTreeConstruct/: README.md  pyproject.toml
faiteam/src/R2AI/GeneralTreeConstruct/example/: test.py
faiteam/src/R2AI/GeneralTreeConstruct/src/GeneralTreeConstruct/: token_counter.py  tree_construct.py
faiteam/src/R2AI/GeneralTreeConstruct/src/GeneralTreeConstruct.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
faiteam/src/R2AI/LegalTreeConstruct/: README.md  pyproject.toml
faiteam/src/R2AI/LegalTreeConstruct/example/: example.py  sample_data.json
faiteam/src/R2AI/LegalTreeConstruct/src/LegalTreeConstruct/: document_constructor.py  level_detector.py  token_counter.py  tree_builder.py  tree_exporter.py
faiteam/src/R2AI/LegalTreeConstruct/src/LegalTreeConstruct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mscai/src/backend/: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml
mscai/src/backend/docker/postgres/: init.sql
mscai/src/backend/docs/: REPORT.md  data-structure.md  prj-architecture.md
mscai/src/backend/scripts/: compose.py  load_postgres.py  run_backend.py  run_competition.py
mscai/src/backend/src/: __init__.py  config.py  dependencies.py  main.py
mscai/src/backend/src/routers/: __init__.py  health.py  legal.py
mscai/src/backend/src/schemas/: __init__.py  legal.py
mscai/src/backend/src/schemas/api/: chat.py
mscai/src/backend/src/services/: __init__.py
mscai/src/backend/src/services/agents/: __init__.py  factory.py  progress.py  registry.py
mscai/src/backend/src/services/agents/base/: __init__.py  (+3 more)
mscai/src/backend/src/services/competition/: __init__.py  output.py
mscai/src/backend/src/services/embeddings/: client.py
mscai/src/backend/src/services/llm/: client.py
mscai/src/backend/src/services/reranker/: client.py
mscai/src/backend/src/services/vector_store/: __init__.py  base.py  chroma.py  factory.py  hybrid.py  in_memory.py  index_builder.py
(+430 files in other folders)
