[project]
name = "legal-assistant-backend"
version = "0.1.0"
description = "FastAPI and LangGraph backend for MscAI legal assistant"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "asyncpg==0.31.0",
    "chromadb==1.5.9",
    "fastapi==0.128.1",
    "langchain-core==1.2.8",
    "langchain-openai==1.1.7",
    "langgraph==1.0.7",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "underthesea==9.2.11",
    "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=8.0,<9",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
